--- a/ERPWeb/Views/AgroConfiguration/FGProductAccept.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/FGProductAccept.cshtml
@@ -103,7 +103,7 @@
                         Data has been failed to save!
                     </div>
                 </div>
-                <button type="button" class="btn btn-outline-danger btn-sm float-right" data-dismiss="modal" data-target="#"><i class="fas fa-paper-plane"></i> Cancel </button>
+                <button type="button" class="btn btn-outline-danger btn-sm float-right" data-dismiss="modal" data-target="#"><i class="fa-solid fa-circle-xmark"></i></i>Cancel</button>
                 <button type="submit" class="btn btn-outline-success btn-sm float-right" id="Accept"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextZone">Save</span> </button>
             </div>
         </div>
