--- a/ERPWeb/Views/AgroConfiguration/_GetPendingFGProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetPendingFGProduct.cshtml
@@ -37,7 +37,7 @@
                         <td class="text-center">@item.EntryDate</td>
                         <td class="text-center">@item.Status</td>
                         <td class="text-center">
-                            <a href="#" class="btn btn-warning btn-sm data-edit-item-Return" style="line-height:1" data-edit-item-Return="@item.FinishGoodProductionBatch"><i class="fa fa-pen"></i> Approve</a>
+                            <a href="#" class="btn btn-success btn-sm data-edit-item-Return" style="line-height:1" data-edit-item-Return="@item.FinishGoodProductionBatch"><i class="fa-sharp fa-solid fa-bolt"></i>Approve</a>
                         </td>
                     </tr>
                 }
@@ -55,3 +55,4 @@
     </div>
 
 </div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
