--- a/ERPWeb/Views/AgroConfiguration/_SalesReturnListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_SalesReturnListview.cshtml
@@ -24,7 +24,7 @@
 
 
 <div class="row">
-    <div class="table-responsive p-0 " style="height: 600px;">
+    <div class="table-responsive p-0 " style="height: 400px;">
         <table class="table table-head-fixed table-sm text-sm text-nowrap tadd" id="tblList">
             <thead>
                 <tr class="text-center" style="color:black">
@@ -81,7 +81,7 @@
             </tbody>
 
         </table>
-        <table class="table table-head-fixed text-nowrap tablesubtotal">
+        @*<table class="table table-head-fixed text-nowrap tablesubtotal">
             <thead>
                 <tr class="text-center">
 
@@ -96,7 +96,7 @@
                 </tr>
             </thead>
             <tbody class="bg-gradient-gray"></tbody>
-        </table>
+        </table>*@
     </div>
 </div>
 
