--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -3,9 +3,9 @@
         int sl=0;
     }
 <div class="col-md-12">
-    <table class="table table-responsive-lg table-striped text-sm">
-        <thead>
-            <tr class="btn-dark">
+    <table class="table table-bordered table-striped table-hover table-sm text-sm">
+        <thead class="btn-dark">
+            <tr class="text-center">
                 <th class="hide">id</th>
                 <th>SL</th>
                 <th class="hide">depotid</th>
