--- a/ERPWeb/Views/Shared/_Layout.cshtml
+++ b/ERPWeb/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
     <!-- AdminLTE App -->
     <script src="~/Scripts/Chart.min.js"></script>
 
-    @*<script src="~/Scripts/canvasjs.min.js"></script>*@
+    <script src="~/Scripts/canvasjs.min.js"></script>
 
     @*<script src="~/Scripts/canvasjs.min.js"></script>*@
 
@@ -101,7 +101,7 @@
     <script src="~/Scripts/download.js"></script>
     <script src="~/Scripts/print.js"></script>
     <script src="~/Scripts/ds.js"></script>
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
     <link href="~/Content/dist/css/dashboardCSS.css" rel="stylesheet" />
 
     <script type="text/javascript">
