--- a/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
@@ -21,12 +21,12 @@
             <ul class="nav nav-tabs nav-pills bg-navy" id="custom-tabs-two-tab" role="tablist">
 
                 <li class="nav-item">
-                    <a class="nav-link active text-white" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Issue Stock</a>
+                    <a class="nav-link active text-white" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Stock List</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hide">
                     <a class="nav-link text-white" id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Raw Material Issue list</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hide">
                     <a class="nav-link text-white" id="custom-tabs-two-pstockrawmaterial-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterial" role="tab" aria-controls="custom-tabs-two-pstockrawmaterial" aria-selected="false">Create Raw Material Issue</a>
                 </li>
 
@@ -41,7 +41,7 @@
         <div class="card-body shadow">
             <div class="tab-content" id="custom-tabs-two-tabContent">
                 @*@Html.AntiForgeryToken()*@
-                <div class="tab-pane fade" id="custom-tabs-two-pstockrawmaterialList" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialList-tab">
+                <div class="tab-pane fade hide" id="custom-tabs-two-pstockrawmaterialList" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialList-tab">
 
                     <div class="row" style="margin-top:-30px">
                         <div class="col-md-12">
@@ -82,7 +82,7 @@
 
 
 
-                <div class="tab-pane fade show " id="custom-tabs-two-pstockrawmaterial" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterial-tab">
+                <div class="tab-pane fade hide " id="custom-tabs-two-pstockrawmaterial" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterial-tab">
                     <div class="row" >
                         <div class="col-md-12" style="margin-top:-30px">
                             <div class="card card-navy">
