--- a/ERPWeb/Content/LogIn/css/style.css
+++ b/ERPWeb/Content/LogIn/css/style.css
@@ -44,7 +44,7 @@ h1,h2,h3,h4,h5,h6{
 	font-family: 'Montserrat', sans-serif;
 }
 .top-img-agileits-w3layouts {
-    background: url(../images/right.jpg)no-repeat 0px 0px;
+    /*background: url(../images/right.jpg)no-repeat 0px 0px;*/
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
