--- a/ERPWeb/Views/Access/LogIn.cshtml
+++ b/ERPWeb/Views/Access/LogIn.cshtml
@@ -31,18 +31,16 @@
 </head>
 <body>
     <!-- main-content -->
-    <h1 style="text-shadow: 2px 2px #a19c9c;">Enterprise Resource Planning</h1>
+    <h1 style="text-shadow: 2px 3px #cace41b3; color: #4a3d2e;">Enterprise Resource Planning</h1>
     <div class="main-content-agileits">
-        <!-- left-content -->
-        <div class="left-text-w3ls">
-            <h3>Make Your Business Easier</h3>
-            <p><a class="fa fa-bullseye" aria-hidden="true"></a> To enhance user performance use Google <img src="~/Content/LogIn/images/chormeLogo.png" alt="Alternate Text" width="30" height="30" /> Chrome Browser</p>
-        </div>
-        <!-- //left-content -->
-        <!-- form -->
+      
         <div class="login-w3l">
-            <div class="top-img-agileits-w3layouts">
-                <h2 class="sub-head-w3-agileits">Sign in to start your session</h2>
+            @*<div class="top-img-agileits-w3layouts">
+                
+            </div>*@
+            <div class="das-logo">
+                <img src="~/Content/LogIn/images/agrologo3.png" />
+
             </div>
             <div class="login-form">
                 @using (Html.BeginForm())
@@ -65,10 +63,7 @@
     </div>
 
     <!--// main-content -->
-    <!--Copyright-->
-    <div class="footer-agileits">
-        <p>©Copyright @DateTime.Now.Year . All Rights Reserved | Developed & Maintained by <a href="http://playon24.com.bd/" target="_blank"> PlayOn24</a> | Hotline: 01632 54 93 23 (10am-5pm)</p>
-    </div>
+
     <!--//Copyright-->
     <script src="~/Scripts/jquery-3.3.1.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
